src/objects/Survey_Answers__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Type__c</fullName>
        <formula>IF( ISNUMBER( Answer__c ) , &apos;Score&apos;, &apos;Comments&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQ13Is06__c</fullName>
        <formula>IF(Survey_Questions__r.Notes__c = &quot;CQ13&quot;, 
IF( OR(Answer__c = &quot;0&quot;,Answer__c = &quot;1&quot;,Answer__c = &quot;2&quot;,Answer__c = &quot;3&quot;,Answer__c = &quot;4&quot;,Answer__c = &quot;5&quot;,Answer__c = &quot;6&quot;,Answer__c = &quot;7&quot;,Answer__c = &quot;8&quot;,Answer__c = &quot;9&quot;) , 
IF( VALUE(Answer__c ) &lt;=6 , 1, 0) , 
null),null)</formula>
        <label>CQ13Is06</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQ13Is910__c</fullName>
        <formula>IF(Survey_Questions__r.Notes__c = &quot;CQ13&quot;, 
IF( OR(Answer__c = &quot;0&quot;,Answer__c = &quot;1&quot;,Answer__c = &quot;2&quot;,Answer__c = &quot;3&quot;,Answer__c = &quot;4&quot;,Answer__c = &quot;5&quot;,Answer__c = &quot;6&quot;,Answer__c = &quot;7&quot;,Answer__c = &quot;8&quot;,Answer__c = &quot;9&quot;) , 
IF( VALUE(Answer__c ) &gt;=9 , 1, 0) , 
null),null)</formula>
        <label>CQ13Is910</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Question_Notes__c</fullName>
        <formula>Survey_Questions__r.Notes__c</formula>
        <label>Question Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Questions__c</fullName>
        <formula>Survey_Questions__r.Questions__c</formula>
        <label>Questions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>IF( ISPICKVAL( Case__r.Status , &apos;Closed&apos;) , &apos;Closed&apos;, &apos;Open&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>个案</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Answers</relationshipLabel>
        <relationshipName>Case_Survey_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closer_Email__c</fullName>
        <formula>Case__r.CSC_Closer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Datetime__c</fullName>
        <formula>CreatedDate</formula>
        <label>Create Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>If_rerender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>If rerender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is04__c</fullName>
        <formula>IF(Survey_Questions__r.Notes__c = &quot;CQ1&quot;, 
 IF(   OR(Answer__c = &quot;0&quot;,Answer__c = &quot;1&quot;,Answer__c = &quot;2&quot;,Answer__c = &quot;3&quot;,Answer__c = &quot;4&quot;,Answer__c = &quot;5&quot;,Answer__c = &quot;6&quot;,Answer__c = &quot;7&quot;,Answer__c = &quot;8&quot;,Answer__c = &quot;9&quot;) ,  
 IF( VALUE(Answer__c ) &lt;=4 , 1, 0) , 
 null), null)</formula>
        <label>CQ1Is04</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is910__c</fullName>
        <formula>IF(Survey_Questions__r.Notes__c = &quot;CQ1&quot;,
IF( OR(Answer__c = &quot;0&quot;,Answer__c = &quot;1&quot;,Answer__c = &quot;2&quot;,Answer__c = &quot;3&quot;,Answer__c = &quot;4&quot;,Answer__c = &quot;5&quot;,Answer__c = &quot;6&quot;,Answer__c = &quot;7&quot;,Answer__c = &quot;8&quot;,Answer__c = &quot;9&quot;) , 
IF( VALUE(Answer__c ) &gt;=9 , 1, 0) , 
null),null)</formula>
        <label>CQ1Is910</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Query_Type__c</fullName>
        <formula>TEXT(Survey_Questions__r.Query_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Query_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Distribute__c</fullName>
        <label>Survey Distribute</label>
        <referenceTo>Survey_Distribute__c</referenceTo>
        <relationshipLabel>Survey Answers</relationshipLabel>
        <relationshipName>Distribute_Survey_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Questions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Questions</label>
        <referenceTo>Survey_Questions__c</referenceTo>
        <relationshipLabel>Survey Answers</relationshipLabel>
        <relationshipName>Survey_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TCE_Case_Owner_Email__c</fullName>
        <formula>Case__r.CSC_Previous_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCE Case Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCE_Case_Owner_Manager__c</fullName>
        <formula>Case__r.CSC_Previous_Owner__r.Manager.LastName +  Case__r.CSC_Previous_Owner__r.Manager.FirstName</formula>
        <label>TCE Case Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCE_Owner_Name__c</fullName>
        <formula>Case__r.CSC_Previous_Owner__r.LastName+Case__r.CSC_Previous_Owner__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCE Case Owner Name</label>
        <type>Text</type>
    </fields>
    <label>Survey Answers</label>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>